--- a/roles/openaihub/templates/openaihub-ui.yaml.j2
+++ b/roles/openaihub/templates/openaihub-ui.yaml.j2
@@ -31,6 +31,8 @@ spec:
           value: {{ openaihub.react_app_upload }}
         - name: REACT_APP_KFP
           value: {{ item.react_app_kfp }}
+        - name: REACT_APP_NBVIEWER_API
+          value: {{ item.react_app_nbviewer_api }}
 
 ---
 apiVersion: v1
